harbor/cosign/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-cosign-service
  namespace: harbor
  labels:
    app: harbor-cosign
    app.kubernetes.io/managed-by: "Helm"
  annotations:
    meta.helm.sh/release-name: "harbor"
    meta.helm.sh/release-namespace: "harbor"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: harbor-cosign
  type: ClusterIP
