harbor/cosign/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-cosign-ingress
  namespace: harbor
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cosign.harbor.unbe1iev.com
      secretName: harbor-cosign-tls
  rules:
    - host: cosign.harbor.unbe1iev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor-cosign-service
                port:
                  number: 8080
